--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,21 @@ a {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: .5em;
+}
 
+.overFlowContainer {
+  width: 100%;
+  overflow-x: scroll;
+}
+
+.overFlowContainer ::-webkit-scrollbar {
+  display: none;
+}
+
+.row_ {
+  display: flex;
+  flex-direction: row;
+  gap: .5em;
 }
 
 .cd1 {
@@ -133,20 +147,19 @@ a {
   white-space: nowrap;
 }
 
-.sideBar{
+.sideBar {
   transition: all .5s;
   top: 0;
   left: 0;
 }
 
-.display{
+.display {
   left: 0;
 }
 
-.outDisplay{
+.outDisplay {
   left: -200%;
 }
-
 
 @media screen and (min-width: 320) {
   .grid {
@@ -235,7 +248,7 @@ a {
 
   .img-container {
     width: 100%;
-    height: 170;
+    height: 150;
     position: relative;
   }
 }
@@ -281,7 +294,7 @@ a {
 
   .img-container {
     width: 100%;
-    height: 200;
+    height: 150;
     position: relative;
   }
 }
@@ -303,7 +316,7 @@ a {
 
   .img-container {
     width: 100%;
-    height: 220;
+    height: 150;
     position: relative;
   }
 }
@@ -329,7 +342,7 @@ a {
 
   .img-container {
     width: 100%;
-    height: 220;
+    height: 150;
     position: relative;
   }
 }
