--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,12 +10,10 @@
   }
 }
 
-/* html,
+html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-
-} */
+}
 
 .bg-blacg {
   background-color: black;
@@ -80,7 +78,7 @@ a {
   overflow-x: scroll;
 }
 
-.overFlowContainer ::-webkit-scrollbar {
+.overFlowContainer::-webkit-scrollbar {
   display: none;
 }
 
@@ -97,9 +95,9 @@ a {
   justify-content: space-around;
 }
 
-/* .item-nome {
+.item-nome {
   height: 48px;
-} */
+}
 
 .item-img {
   object-fit: cover;
